styled question page, fixed drill groups, fixed button spacing for nav

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -102,26 +102,26 @@ input, select, textarea{
 }
 
 
-h2 {
-  display: inline;
-  align-self: baseline;
-  font-family: 'Montserrat', sans-serif !important;
-  font-weight: 500;
-  color: #D12834 !important;
-  font-size:30px !important;
-  letter-spacing: 3px !important;
-}
-
-h3 {
-  // padding-left: 65px;
-  display: inline;
-  align-self: baseline;
-  font-family: 'Montserrat', sans-serif !important;
-  font-weight: 500;
-  color: #D12834 !important;
-  font-size:20px !important;
-  letter-spacing: 3px !important;
-}
+// h2 {
+//   display: inline;
+//   align-self: baseline;
+//   font-family: 'Montserrat', sans-serif !important;
+//   font-weight: 500;
+//   color: #D12834 !important;
+//   font-size:30px !important;
+//   letter-spacing: 3px !important;
+// }
+//
+// h3 {
+//   // padding-left: 65px;
+//   display: inline;
+//   align-self: baseline;
+//   font-family: 'Montserrat', sans-serif !important;
+//   font-weight: 500;
+//   color: #D12834 !important;
+//   font-size:20px !important;
+//   letter-spacing: 3px !important;
+// }
 
 .highlight-rank {
       color: #D12834 !important;
